# oneiric-story-forge

./: README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts
backend/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  auth.py  hello.py  main.py  pyproject.toml
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DreamForm.tsx  DreamGenerator.tsx  DreamHistory.tsx
frontend/src/components/ui/: button.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Index.tsx  Login.tsx  Signup.tsx
src/components/: DreamForm.tsx  DreamGenerator.tsx  DreamHistory.tsx
src/pages/: NotFound.tsx
